--- a/commonjs/package.json
+++ b/commonjs/package.json
@@ -1,10 +1,20 @@
 {
+	"browser": {
+		"jquery": "./bower_components/jquery/dist/jquery.js"
+	},
+	"browserify": {
+		"transform": ["browserify-shim"]
+	},
+	"browserify-shim": {
+		"jquery": "global:jQuery"
+	},
 	"dependencies": {
 		"moment": "~2.5.1"
 	},
 	"devDependencies": {
 		"bower": "~1.3.2",
 		"browserify": "~3.38.0",
+		"browserify-shim": "~3.4.1",
 		"uglifyify": "~2.1.1"
 	}
 }
